# rust-pg-sqlx

./: .env  1-basic-sql-connection.txt  2-basic-sql-connection-pool.txt  Cargo.toml  README.md  script.sql
src/: main.rs
