[package]
name = "pg-samples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
#futures-util = "0.3.30"
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "json",
    "uuid",
    "chrono",
] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = "1.6.1"
